--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login Page</title>
+    <title>Login</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
     <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       type="text/css"
@@ -59,7 +65,7 @@
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-login100">
-          <form class="login100-form validate-form" action="index.php" method="POST" target="_blank">
+          <form class="login100-form validate-form" action="" method="POST">
             <span class="login100-form-title p-b-43"> Login to continue </span>
 
             <div
@@ -101,25 +107,118 @@
             <div class="container-login100-form-btn">
               <button class="login100-form-btn">Login</button>
             </div>
-
             <div class="text-center p-t-46 p-b-20">
-              <span class="txt2"> or sign up using </span>
+              <span class="txt2">or SIGN UP</span>
             </div>
 
-            <div class="login100-form-social flex-c-m">
-              <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                <i class="fa fa-facebook-f" aria-hidden="true"></i>
-              </a>
-
-              <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-            </div>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#exampleModalCenter"
+            >
+              Sign up
+            </button>
           </form>
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModalCenter"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">
+                    Sign Up
+                  </h5>
+                  <button
+                    type="button"
+                    class="close"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                  >
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="signupFrm">
+                    <form action="signup.php" method="post" target="_blank">
+                      <div class="fname-lname">
+                        <div class="inputContainer">
+                          <input
+                            type="text"
+                            class="input"
+                            placeholder="a"
+                            name="fname"
+                          />
+                          <label for="" class="label">Fname</label>
+                        </div>
+                        <div class="inputContainer">
+                          <input
+                            type="text"
+                            class="input"
+                            placeholder="a"
+                            name="lname"
+                          />
+                          <label for="" class="label">Lname</label>
+                        </div>
+                      </div>
+                      <div class="inputContainer">
+                        <input
+                          type="text"
+                          class="input"
+                          placeholder="a"
+                          name="email"
+                        />
+                        <label for="" class="label">Email</label>
+                      </div>
 
+                      <div class="inputContainer">
+                        <input
+                          type="text"
+                          class="input"
+                          placeholder="a"
+                          name="username"
+                        />
+                        <label for="" class="label">Username</label>
+                      </div>
+                      <div class="inputContainer">
+                        <input
+                          type="password"
+                          class="input"
+                          placeholder="a"
+                          name="password"
+                        />
+                        <label for="" class="label">Password</label>
+                      </div>
+
+                      <div class="inputContainer">
+                        <input type="password" class="input" placeholder="a" />
+                        <label for="" class="label">Confirm Password</label>
+                      </div>
+                      <div style="padding-top: 10px">
+                        <input
+                          type="submit"
+                          class="submitBtn"
+                          value="Sign up"
+                        />
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div
             class="login100-more"
-            style="background-image: url('images/socialmedia.jpg'); background-position: center;"
+            style="
+              background-image: url('images/socialmedia.jpg');
+              background-position: center;
+            "
           ></div>
         </div>
       </div>
@@ -140,6 +239,21 @@
     <!--===============================================================================================-->
     <script src="vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/main.js"></script>
   </body>
 </html>
