--- a/index.html
+++ b/index.html
@@ -1,259 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Login</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="vendor/bootstrap/css/bootstrap.min.css"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css"
-    />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="vendor/css-hamburgers/hamburgers.min.css"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="vendor/animsition/css/animsition.min.css"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="vendor/select2/select2.min.css"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="vendor/daterangepicker/daterangepicker.css"
-    />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/util.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <!--===============================================================================================-->
-  </head>
-  <body style="background-color: #666666">
-    <div class="limiter">
-      <div class="container-login100">
-        <div class="wrap-login100">
-          <form class="login100-form validate-form" action="" method="POST">
-            <span class="login100-form-title p-b-43"> Login to continue </span>
 
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Valid email is required: ex@abc.xyz"
-            >
-              <input class="input100" type="text" name="email" />
-              <span class="focus-input100"></span>
-              <span class="label-input100">Email</span>
+<head>
+  <title>Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!--===============================================================================================-->
+  <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="css/util.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <!--===============================================================================================-->
+</head>
+
+<body style="background-color: #666666">
+  <div class="limiter">
+    <div class="container-login100">
+      <div class="wrap-login100">
+        <form class="login100-form validate-form" action="php/login.php" method="POST">
+          <span class="login100-form-title p-b-43"> Login to continue </span>
+
+          <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+            <input class="input100" type="text" name="email" />
+            <span class="focus-input100"></span>
+            <span class="label-input100">Email</span>
+          </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Password is required">
+            <input class="input100" type="password" name="pass" />
+            <span class="focus-input100"></span>
+            <span class="label-input100">Password</span>
+          </div>
+
+          <div class="flex-sb-m w-full p-t-3 p-b-32">
+            <div class="contact100-form-checkbox">
+              <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me" />
+              <label class="label-checkbox100" for="ckb1">
+                Remember me
+              </label>
             </div>
 
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Password is required"
-            >
-              <input class="input100" type="password" name="pass" />
-              <span class="focus-input100"></span>
-              <span class="label-input100">Password</span>
+            <div>
+              <a href="#" class="txt1"> Forgot Password? </a>
             </div>
+          </div>
 
-            <div class="flex-sb-m w-full p-t-3 p-b-32">
-              <div class="contact100-form-checkbox">
-                <input
-                  class="input-checkbox100"
-                  id="ckb1"
-                  type="checkbox"
-                  name="remember-me"
-                />
-                <label class="label-checkbox100" for="ckb1">
-                  Remember me
-                </label>
+          <div class="container-login100-form-btn">
+            <button class="login100-form-btn">Login</button>
+          </div>
+          <div class="text-center p-t-46 p-b-20">
+            <span class="txt2">or SIGN UP</span>
+          </div>
+
+          <button type="button" class="btn btn-primary login100-form-btn" data-toggle="modal" data-target="#exampleModalCenter">
+            Sign up
+          </button>
+        </form>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+          aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">
+                  Sign Up
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
               </div>
-
-              <div>
-                <a href="#" class="txt1"> Forgot Password? </a>
-              </div>
-            </div>
-
-            <div class="container-login100-form-btn">
-              <button class="login100-form-btn">Login</button>
-            </div>
-            <div class="text-center p-t-46 p-b-20">
-              <span class="txt2">or SIGN UP</span>
-            </div>
-
-            <button
-              type="button"
-              class="btn btn-primary"
-              data-toggle="modal"
-              data-target="#exampleModalCenter"
-            >
-              Sign up
-            </button>
-          </form>
-          <!-- Modal -->
-          <div
-            class="modal fade"
-            id="exampleModalCenter"
-            tabindex="-1"
-            role="dialog"
-            aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLongTitle">
-                    Sign Up
-                  </h5>
-                  <button
-                    type="button"
-                    class="close"
-                    data-dismiss="modal"
-                    aria-label="Close"
-                  >
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <div class="signupFrm">
-                    <form action="signup.php" method="post" target="_blank">
-                      <div class="fname-lname">
-                        <div class="inputContainer">
-                          <input
-                            type="text"
-                            class="input"
-                            placeholder="a"
-                            name="fname"
-                          />
-                          <label for="" class="label">Fname</label>
-                        </div>
-                        <div class="inputContainer">
-                          <input
-                            type="text"
-                            class="input"
-                            placeholder="a"
-                            name="lname"
-                          />
-                          <label for="" class="label">Lname</label>
-                        </div>
+              <div class="modal-body">
+                <div class="signupFrm">
+                  <form action="php/signup.php" method="post" target="_blank">
+                    <div class="fname-lname">
+                      <div class="inputContainer">
+                        <input type="text" class="input" placeholder="a" name="fname" />
+                        <label for="" class="label">Fname</label>
                       </div>
                       <div class="inputContainer">
-                        <input
-                          type="text"
-                          class="input"
-                          placeholder="a"
-                          name="email"
-                        />
-                        <label for="" class="label">Email</label>
+                        <input type="text" class="input" placeholder="a" name="lname" />
+                        <label for="" class="label">Lname</label>
                       </div>
+                    </div>
+                    <div class="inputContainer">
+                      <input type="text" class="input" placeholder="a" name="email" />
+                      <label for="" class="label">Email</label>
+                    </div>
 
-                      <div class="inputContainer">
-                        <input
-                          type="text"
-                          class="input"
-                          placeholder="a"
-                          name="username"
-                        />
-                        <label for="" class="label">Username</label>
-                      </div>
-                      <div class="inputContainer">
-                        <input
-                          type="password"
-                          class="input"
-                          placeholder="a"
-                          name="password"
-                        />
-                        <label for="" class="label">Password</label>
-                      </div>
+                    <div class="inputContainer">
+                      <input type="text" class="input" placeholder="a" name="username" />
+                      <label for="" class="label">Username</label>
+                    </div>
+                    <div class="inputContainer">
+                      <input type="password" class="input" placeholder="a" name="password" />
+                      <label for="" class="label">Password</label>
+                    </div>
 
-                      <div class="inputContainer">
-                        <input type="password" class="input" placeholder="a" />
-                        <label for="" class="label">Confirm Password</label>
-                      </div>
-                      <div style="padding-top: 10px">
-                        <input
-                          type="submit"
-                          class="submitBtn"
-                          value="Sign up"
-                        />
-                      </div>
-                    </form>
-                  </div>
+                    <div class="inputContainer">
+                      <input type="password" class="input" placeholder="a" />
+                      <label for="" class="label">Confirm Password</label>
+                    </div>
+                    <div style="padding-top: 10px">
+                      <input type="submit" class="submitBtn" value="Sign up" />
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
           </div>
-          <div
-            class="login100-more"
-            style="
+        </div>
+        <div class="login100-more" style="
               background-image: url('images/socialmedia.jpg');
               background-position: center;
-            "
-          ></div>
-        </div>
+            "></div>
       </div>
     </div>
+  </div>
 
-    <!--===============================================================================================-->
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/animsition/js/animsition.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/bootstrap/js/popper.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/select2/select2.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/daterangepicker/moment.min.js"></script>
-    <script src="vendor/daterangepicker/daterangepicker.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/countdowntime/countdowntime.js"></script>
-    <!--===============================================================================================-->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/main.js"></script>
-  </body>
+  <!--===============================================================================================-->
+  <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="vendor/animsition/js/animsition.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="vendor/bootstrap/js/popper.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="vendor/select2/select2.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="vendor/daterangepicker/moment.min.js"></script>
+  <script src="vendor/daterangepicker/daterangepicker.js"></script>
+  <!--===============================================================================================-->
+  <script src="vendor/countdowntime/countdowntime.js"></script>
+  <!--===============================================================================================-->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
