--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="inputContainer">
                       <select name="gender" id="gender" class="input">
-                        <option value=""></option>
+                        <option value="">Choose gender</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                       </select>
@@ -114,6 +114,7 @@
                     </div>
                     <div class="inputContainer">
                       <input type="date" class="input" placeholder="a" name="dob" />
+                      <label for="" class="label">date_of_birth</label>
                     </div>
                     <div class="inputContainer">
                       <input type="text" class="input" placeholder="a" name="username" />
