--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="login100-more" style="
-              background-image: url('images/socialmedia.jpg');
+              background-image: url('socialmedia.jpg');
               background-position: center;
             "></div>
       </div>
