editied login page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <button class="login100-form-btn">Login</button>
           </div>
           <div class="text-center p-t-46 p-b-20">
-            <span class="txt2"></span>
+            <span class="txt2">Don't have a account?</span>
           </div>
           <button type="button" class="btn btn-primary login100-form-btn" data-toggle="modal"
             data-target="#exampleModalCenter">
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="login100-more" style="
-              background-image: url('socialmedia.jpg');
+              background-image: url('images/loginbackground/socialmedia.jpg');
               background-position: center;
             "></div>
       </div>
