edited signup form

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
               <div class="modal-body">
                 <div class="signupFrm">
                   <form action="php/signup.php" method="post" target="_blank">
-                    <div class="fname-lname">
-                      <div class="inputContainer">
+                    <div class="two-childs">
+                      <div class="inputContainer width-50">
                         <input type="text" class="input" placeholder="a" name="fname" />
                         <label for="" class="label">Fname</label>
                       </div>
-                      <div class="inputContainer">
+                      <div class="inputContainer width-50 mar-left">
                         <input type="text" class="input" placeholder="a" name="lname" />
                         <label for="" class="label">Lname</label>
                       </div>
@@ -104,17 +104,19 @@
                       <input type="text" class="input" placeholder="a" name="email" />
                       <label for="" class="label">Email</label>
                     </div>
-                    <div class="inputContainer">
-                      <select name="gender" id="gender" class="input">
-                        <option value="">Choose gender</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                      </select>
-                      <label for="" class="label">Gender</label>
-                    </div>
-                    <div class="inputContainer">
-                      <input type="date" class="input" placeholder="a" name="dob" />
-                      <label for="" class="label">date_of_birth</label>
+                    <div class="two-childs">
+                      <div class="inputContainer width-50">
+                        <select name="gender" id="gender" class="input">
+                          <option value="">Choose gender</option>
+                          <option value="male">Male</option>
+                          <option value="female">Female</option>
+                        </select>
+                        <label for="" class="label">Gender</label>
+                      </div>
+                      <div class="inputContainer width-50 mar-left">
+                        <input type="date" class="input" placeholder="a" name="dob" />
+                        <label for="" class="label">date_of_birth</label>
+                      </div>
                     </div>
                     <div class="inputContainer">
                       <input type="text" class="input" placeholder="a" name="username" />
