date field edited in singup form

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="two-childs">
                       <div class="inputContainer width-50">
                         <select name="gender" id="gender" class="input">
-                          <option value="">Choose gender</option>
+                          <option disabled selected value> -- select an option -- </option>
                           <option value="male">Male</option>
                           <option value="female">Female</option>
                         </select>
